--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 api.security.token.secret=my-secret-key-from-video
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+server.address=0.0.0.0
